[package]
name = "sol-mate-escrow"
version = "0.1.0"
description = "Sol Mate stake-to-interact safety escrow on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_mate_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
